--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -26,22 +26,11 @@ javax.persistence.jdbc.user=${masterdata_database_username}
 javax.persistence.jdbc.password=${masterdata_database_password}
 javax.persistence.jdbc.schema=kernel
 
-# swagger open api 
-openapi.info.title=Master Data Service
-openapi.info.description=Master Data Service for CRUD
-openapi.info.version=1.0
-openapi.info.license.name=Mosip
-openapi.info.license.url=https://docs.mosip.io/platform/license
-springdoc.swagger-ui.disable-swagger-default-url=true
-#master.search.maximum.rows=50
-
-#mosip.kernel.database.hostname=104.211.202.203
-#mosip.kernel.database.port=9001 
-
-#Swagger 3.0
+#Swagger 3.0 open api
 openapi.info.title=Admin Service
 openapi.info.description=Admin for CRUD
 openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
 springdoc.swagger-ui.disable-swagger-default-url=true
+spring.mvc.servlet.path=/v1/masterdata
