--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -225,7 +225,7 @@
 		<kernel.logger.version>1.1.5.2</kernel.logger.version>
 		<kernel.crypto.version>1.1.5.2</kernel.crypto.version>
 		<kernel.keymanager.version>1.1.5.2</kernel.keymanager.version>
-		<kernel-websubclient-api.version>1.1.5.2</kernel-websubclient-api.version>
+		<kernel-websubclient-api.version>1.1.5.5-SNAPSHOT</kernel-websubclient-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
