--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -120,3 +120,6 @@ mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
 mosip.iam.adapter.validate-expiry-check-rate=15
 mosip.iam.adapter.renewal-before-expiry-interval=15
+
+syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
+syncdata.cache.snapshot.cron=0 0 23 * * *
