--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -151,3 +151,7 @@ mosip.role.admin.syncdata.getgetcacertificates=REGISTRATION_SUPERVISOR,REGISTRAT
 mosip.role.admin.syncdata.getv2clientsettings=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getclientsettingsentityIdentifier=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getscriptsscriptName=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default,REGISTRATION_PROCESSOR,INDIVIDUAL,RESIDENT,ID_AUTHENTICATION
+
+
+syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
+syncdata.cache.snapshot.cron=0 0 23 * * *
