Removed concate of mandate and optional languages, instead using method from languageUtils

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -22,7 +22,6 @@ mosip.supported-languages=eng,ara,fra
 
 mosip.optional-languages=ara,fra
 mosip.mandatory-languages=eng
-mosip.admin.ui.configs=mandatoryLangCode:${mosip.mandatory-languages};optionalLangCode:${mosip.optional-languages}
 mosip.recommended.centers.locCode =5
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8086/v1/authmanager
 #---------------------------------------Security Properties-----------------------------
@@ -402,3 +401,9 @@ mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}
 
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
 mosip.kernel.config.server.file.storage.uri=http://localhost/config/kernel-masterdata-service/mz/develop/
+
+mosip.primary-language=eng
+mosip.secondary-language=ara
+mosip.all-languages=all
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
+nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
