--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -96,10 +96,10 @@ mosip.admin.masterdata.card.centers-eng=Registration Center
 mosip.admin.masterdata.card.centers-fra=Centre d'inscription
 mosip.admin.masterdata.card.centers-ara=\u0645\u0631\u0643\u0632 \u0627\u0644\u062A\u0633\u062C\u064A\u0644
 
-#masterdata blacklisted words
-mosip.admin.masterdata.card.blacklisted-eng=Blacklisted Words
-mosip.admin.masterdata.card.blacklisted-fra=Mots sur la liste noire
-mosip.admin.masterdata.card.blacklisted-ara=\u0643\u0644\u0645\u0627\u062A \u0641\u064A \u0627\u0644\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0633\u0648\u062F\u0627\u0621
+#masterdata blocklisted words
+mosip.admin.masterdata.card.blocklisted-eng=Blocklisted Words
+mosip.admin.masterdata.card.blocklisted-fra=Mots sur la liste noire
+mosip.admin.masterdata.card.blocklisted-ara=\u0643\u0644\u0645\u0627\u062A \u0641\u064A \u0627\u0644\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0633\u0648\u062F\u0627\u0621
 
 #masterdata application
 mosip.admin.masterdata.card.applications-eng=Application
