fixed bug for bulkupload api

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -277,3 +277,4 @@ mosip.role.admin.getbulkuploadgetalltransactions=GLOBAL_ADMIN
 
 #Audit manager proxy controller
 mosip.role.admin.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.admin-services.required.roles=GLOBAL_ADMIN
