--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -27,10 +27,15 @@ javax.persistence.jdbc.password=${masterdata_database_password}
 javax.persistence.jdbc.schema=kernel
 
 #Swagger 3.0 open api
-openapi.info.title=Admin Service
-openapi.info.description=Admin for CRUD
+openapi.info.title=Admin Master Service
+openapi.info.description=Admin Master for CRUD
 openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=Admin Masterdata url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
-spring.mvc.servlet.path=/v1/masterdata
+spring.mvc.servlet.path=${server.servlet.path}
