--- a/admin/kernel-masterdata-service/src/test/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/bootstrap.properties
@@ -48,12 +48,16 @@ master.search.maximum.rows=50
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 
 # swagger open api 
-openapi.info.title=Master Data Service
-openapi.info.description=Master Data Service for CRUD
+#Swagger 3.0 open api
+openapi.info.title=Admin Master Service
+openapi.info.description=Admin Master for CRUD
 openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=Admin Masterdata url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
-#master.search.maximum.rows=50
-openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
-openapi.masterdata.servers[0].description=Admin Masterdata url
+spring.mvc.servlet.path=${server.servlet.path}
