--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -14,13 +14,6 @@ hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
-#property name is case sensitive and required for interceptors configuration
-#hibernate.ejb.interceptor=io.mosip.kernel.masterdata.config.MasterDataInterceptor
-
-#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
-
-#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
-mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
 mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/search
 
 mosip.kernel.registrationcenterid.length=5
@@ -31,18 +24,17 @@ masterdata_database_username=masteruser
 masterdata_database_password=mosip123
 
 mosip.primary-language=eng
-mosip.secondary-language=ara
+mosip.secondary-language=
 mosip.all-languages=all
 #auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
-mosip.supported-languages=eng,ara,fra
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
-nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
-mosip.recommended.centers.locCode =5
-mosip.supported-languages=eng,ara,fra
-aplication.configuration.level.version=1.1.5
-mosip.optional-languages =fra,ara
-mosip.mandatory-languages = eng
 
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
+nHierarchyLevel:${mosip.recommended.centers.locCode}
+mosip.recommended.centers.locCode =5
+
+aplication.configuration.level.version=1.1.5
+mosip.optional-languages=
+mosip.mandatory-languages=eng
 auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 
