swagger open api3.0 modified

--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -30,3 +30,17 @@ health.config.enabled=false
 #To read the property file by the name
 mosip.admin.globalproperty.prefix=globalMessages_
 mosip.admin.globalproperty.suffix=.properties
+mosip.admin-services.required.roles=GLOBAL_ADMIN
+#Swagger 3.0 open api
+openapi.info.title=Admin Service
+openapi.info.description=Admin Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=Admin Service url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
+springdoc.swagger-ui.disable-swagger-default-url=true
+spring.mvc.servlet.path=${server.servlet.path}
