--- a/admin/admin-service/src/test/resources/bootstrap.properties
+++ b/admin/admin-service/src/test/resources/bootstrap.properties
@@ -18,3 +18,16 @@ server.servlet.path=/r2/v1/admin
 health.config.enabled=false
 mosip.admin.globalproperty.prefix=globalMessages_
 mosip.admin.globalproperty.suffix=.properties
+#Swagger 3.0 open api
+openapi.info.title=Admin Service
+openapi.info.description=Admin Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=Admin Masterdata url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
+springdoc.swagger-ui.disable-swagger-default-url=true
+spring.mvc.servlet.path=${server.servlet.path}
