--- a/admin/kernel-syncdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/bootstrap.properties
@@ -39,3 +39,17 @@ health.config.enabled=false
 
 #To handle LocalTime, LocalDate and LocalDateTime during sync json.
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+#Swagger 3.0 open api
+openapi.info.title=${spring.application.name}
+openapi.info.description=${spring.application.name}
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=${spring.application.name} url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
+springdoc.swagger-ui.disable-swagger-default-url=true
+spring.mvc.servlet.path=${server.servlet.path}
