Bulk upload issue and validadocument API permission fix

--- a/admin/kernel-syncdata-service/src/test/resources/bootstrap.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/bootstrap.properties
@@ -21,3 +21,18 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.master-datasource.jdbcUrl=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:create-schema.sql'
 spring.master-datasource.username=sa
 spring.master-datasource.password=
+
+
+#Swagger 3.0 open api
+openapi.info.title=${spring.application.name}
+openapi.info.description=${spring.application.name}
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=${spring.application.name} url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
+springdoc.swagger-ui.disable-swagger-default-url=true
+spring.mvc.servlet.path=${server.servlet.path}
