history record issue fix

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -407,7 +407,7 @@ mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCo
 nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
 
 
-auth.server.admin.issuer.uri=https://dev.mTokenValidationHelperosip.net/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
 auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip'}
 
