--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -394,7 +394,7 @@ mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL
 
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
 
-auth.server.admin.issuer.uri=https://dev.mTokenValidationHelperosip.net/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
 auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip'}
 
@@ -404,3 +404,5 @@ mosip.iam.adapter.appid=regproc
 mosip.iam.adapter.issuerURL=https://dev.mosip.net/keycloak/auth/realms/mosip
 mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
+
+logging.level.io.mosip=DEBUG
