--- a/admin/hotlist-service/src/main/resources/bootstrap.properties
+++ b/admin/hotlist-service/src/main/resources/bootstrap.properties
@@ -1,8 +1,9 @@
-spring.cloud.config.uri=localhost
-spring.cloud.config.label=develop
+#spring.cloud.config.uri=localhost
+#spring.cloud.config.label=develop
 spring.cloud.config.name=hotlist
 spring.application.name=hotlist
-spring.profiles.active=mz
+#spring.profiles.active=mz
+spring.profiles.active=local
 
 #management.security.enabled=false
 #management.endpoint.health.show-details=when-authorized
@@ -24,3 +25,16 @@ spring.datasource.password=${mosip.hotlist.datasource.password}
 spring.datasource.url=${mosip.hotlist.datasource.url}
 
 security.basic.enabled=false
+#Swagger 3.0 open api
+openapi.info.title=${spring.application.name}
+openapi.info.description=${spring.application.name}
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].description=${spring.application.name} url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
+springdoc.swagger-ui.disable-swagger-default-url=true
+spring.mvc.servlet.path=${server.servlet.path}
