--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #spring.cloud.config.uri=http://104.211.212.28:51000
 #spring.cloud.config.label=master
-spring.profiles.active=local
+spring.profiles.active=local1
 spring.cloud.config.name=kernel
 spring.application.name=kernel-masterdata-service
 #management.security.enabled=false
@@ -39,3 +39,4 @@ openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
 spring.mvc.servlet.path=${server.servlet.path}
+
