MOSIP-15446 openapi.json file generated for admin service

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -8,25 +8,25 @@
 	<artifactId>admin-parent</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<name>admin</name>
 	<description>Parent project of MOSIP Admin</description>
 	<url>https://github.com/mosip/admin-services</url>
-	
+
 	<licenses>
           <license>
                 <name>MPL 2.0</name>
                 <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
           </license>
         </licenses>
-	
+
 	<scm>
                 <connection>scm:git:git://github.com/mosip/admin-services.git</connection>
                 <developerConnection>scm:git:ssh://github.com:mosip/admin-services.git</developerConnection>
                 <url>https://github.com/mosip/admin-services</url>
                 <tag>HEAD</tag>
         </scm>
-	
+
 	<developers>
                 <developer>
                   <name>Mosip</name>
@@ -35,7 +35,7 @@
                   <organizationUrl>https://github.com/mosip/admin-services</organizationUrl>
                 </developer>
         </developers>
-	
+
     <repositories>
         <repository>
             <id>ossrh</id>
@@ -195,7 +195,7 @@
 			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	
+
 	<profiles>
 		<profile>
 			<id>sonar</id>
@@ -226,6 +226,83 @@
 				</plugins>
 			</build>
 		</profile>
+
+			<profile>
+				<id>openapi-doc-generate-profile</id>
+				<dependencies>
+					<dependency>
+						<groupId>io.mosip.kernel</groupId>
+						<artifactId>kernel-auth-adapter</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+				</dependencies>
+				<build>
+					<plugins>
+						<plugin>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-maven-plugin</artifactId>
+							<version>${spring.boot.version}</version>
+							<configuration>
+								<executable>true</executable>
+								<layout>ZIP</layout>
+							</configuration>
+							<executions>
+								<execution>
+									<id>pre-integration-test</id>
+									<goals>
+										<goal>start</goal>
+									</goals>
+									<configuration>
+										<folders>
+											<folder>src/test/resources</folder>
+										</folders>
+										<profiles>
+											<profile>openapi-profile</profile>
+										</profiles>
+										<arguments>
+											<argument>--server.port=8090</argument>
+											<argument>--server.servlet.path=/app/generic</argument>
+										</arguments>
+
+									</configuration>
+								</execution>
+								<execution>
+									<id>post-integration-test</id>
+									<goals>
+										<goal>stop</goal>
+									</goals>
+								</execution>
+								<execution>
+									<goals>
+										<goal>build-info</goal>
+										<goal>repackage</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+							<groupId>org.springdoc</groupId>
+							<artifactId>springdoc-openapi-maven-plugin</artifactId>
+							<version>0.2</version>
+							<executions>
+								<execution>
+									<id>integration-test</id>
+									<goals>
+										<goal>generate</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
+								<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs</apiDocsUrl>
+								<outputFileName>openapi.json</outputFileName>
+								<outputDir>${project.build.directory}</outputDir>
+								<skip>false</skip>
+							</configuration>
+						</plugin>
+					</plugins>
+				</build>
+			</profile>
+
 	</profiles>
 
 	<build>
@@ -310,7 +387,7 @@
 					<configuration>
                          <doclint>none</doclint>
                 	</configuration>
-               </plugin>			
+               </plugin>
 				<plugin>
 				 	 <groupId>org.sonatype.plugins</groupId>
 				 	 <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -322,7 +399,7 @@
 						<autoReleaseAfterClose>false</autoReleaseAfterClose>
 				  	</configuration>
 				</plugin>
-			
+
 		 		<plugin>
 				  	<groupId>org.apache.maven.plugins</groupId>
 				  	<artifactId>maven-source-plugin</artifactId>
@@ -335,7 +412,7 @@
 					  		</goals>
 						</execution>
 				  	</executions>
-				</plugin>			
+				</plugin>
 				<plugin>
 				  	<groupId>org.apache.maven.plugins</groupId>
 				  	<artifactId>maven-gpg-plugin</artifactId>
@@ -364,7 +441,7 @@
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
-			</plugin>	
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -394,9 +471,9 @@
                     		</includeOnlyProperties>
                     		<commitIdGenerationMode>full</commitIdGenerationMode>
  				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-				 <format>json</format> 
+				 <format>json</format>
 			</configuration>
-			</plugin> 
+			</plugin>
 		</plugins>
 	</build>
 </project>
