MOSIP-15446 openapi.json file generated for hot list  service

--- a/admin/hotlist-service/src/test/resources/bootstrap.properties
+++ b/admin/hotlist-service/src/test/resources/bootstrap.properties
@@ -22,5 +22,5 @@ spring.datasource.driver-class-name=${mosip.hotlist.datasource.driverClassName}
 spring.datasource.username=${mosip.hotlist.datasource.username}
 spring.datasource.password=${mosip.hotlist.datasource.password}
 spring.datasource.url=${mosip.hotlist.datasource.url}
-
+mosip.hotlist.topic-to-publish=MOSIP_HOTLIST
 security.basic.enabled=false
