--- a/admin/admin-service/src/test/resources/application.properties
+++ b/admin/admin-service/src/test/resources/application.properties
@@ -340,3 +340,8 @@ mosip.role.admin.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
 
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+websub.base.url=${mosipbox.public.url}
+# Websub URL for Topic Subscriptions
+websub.hub.url=${websub.base.url}/hub/
+# Websub URL for Publishing/registering topics
+websub.publish.url=${websub.base.url}/hub/
