Added missing config

--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -277,3 +277,11 @@ mosip.role.admin.getbulkuploadgetalltransactions=GLOBAL_ADMIN
 
 #Audit manager proxy controller
 mosip.role.admin.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
+
+mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client,mosip-partner-client,mosip-crereq-client,mosip-creser-client,mosip-datsha-client,mosip-ida-client,mosip-resident-client,mosip-reg-client
+
+# Credential to request the token from OIDC provider.
+mosip.iam.adapter.clientid=mosip-admin-client
+mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.appid=admin
