--- a/admin/admin-service/src/test/resources/bootstrap.properties
+++ b/admin/admin-service/src/test/resources/bootstrap.properties
@@ -11,7 +11,7 @@ management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 
 server.port=8098
-server.servlet.path=/r2/v1/admin
+server.servlet.context-path=/r2/v1/admin
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
@@ -25,9 +25,9 @@ openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
 mosipbox.public.url=http://localhost:${server.port}
-openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-path}
 openapi.service.servers[0].description=Admin Masterdata url
 openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
-spring.mvc.servlet.path=${server.servlet.path}
+spring.mvc.servlet.path=${server.servlet.context-path}
