--- a/admin/kernel-syncdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/bootstrap.properties
@@ -13,8 +13,7 @@ management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
 server.port=8089
-server.servlet.path=/v1/syncdata
-
+server.servlet.context-path=/v1/syncdata
 
 #javax.persistence.jdbc.url=${syncdata_database_url}
 #javax.persistence.jdbc.user=${syncdata_database_username}
@@ -47,9 +46,9 @@ openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
 mosipbox.public.url=http://localhost:${server.port}
-openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-path}
 openapi.service.servers[0].description=${spring.application.name} url
 openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
-spring.mvc.servlet.path=${server.servlet.path}
+spring.mvc.servlet.path=${server.servlet.context-path}
