--- a/admin/hotlist-service/src/test/resources/bootstrap.properties
+++ b/admin/hotlist-service/src/test/resources/bootstrap.properties
@@ -12,7 +12,7 @@ management.endpoints.web.exposure.include=info,health,refresh,restart
 
 
 server.port=8095
-server.servlet.path=/v1/hotlist
+server.servlet.context-path=/v1/hotlist
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
