--- a/admin/kernel-syncdata-service/src/test/resources/bootstrap.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/bootstrap.properties
@@ -7,8 +7,7 @@ management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 
 server.port=8089
-
-server.servlet.path=/syncdata
+server.servlet.context-path=/syncdata
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
@@ -30,9 +29,9 @@ openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
 mosipbox.public.url=http://localhost:${server.port}
-openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-path}
 openapi.service.servers[0].description=${spring.application.name} url
 openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
-spring.mvc.servlet.path=${server.servlet.path}
+spring.mvc.servlet.path=${server.servlet.context-path}
