--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -21,7 +21,7 @@ server.servlet.path=/masterdata
 mosip.optional-languages=ara,fra
 mosip.mandatory-languages=eng
 mosip.recommended.centers.locCode =5
-mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8086/v1/authmanager
+mosip.kernel.masterdata.auth-manager-base-uri=https://dev.mosip.net/v1/authmanager
 #---------------------------------------Security Properties-----------------------------
 #CSRF switch
 mosip.security.csrf-enable=false
