--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -398,7 +398,7 @@ mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL
 mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}[a-zA-Z0-9]$
 
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
-mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel-masterdata-service/mz/develop/
+mosip.kernel.config.server.file.storage.uri=http://localhost/config/kernel-masterdata-service/mz/develop/
 
 mosip.primary-language=eng
 mosip.secondary-language=ara
