fixed bug for masterdata-service

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -150,6 +150,7 @@ mosip.role.admin.masterdata.patchdocumenttypes=GLOBAL_ADMIN,ZONAL_ADMIN
 #mosip.role.admin.masterdata.getdynamicfields=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,INDIVIDUAL,Default
 #mosip.role.admin.masterdata.getdistinct=INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,ZONAL_ADMIN,GLOBAL_ADMIN,Default
 mosip.role.admin.masterdata.postdynamicfields=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.postdynamicfieldsfiltervalues=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.putdynamicfields =ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.patchdynamicfieldsall=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.patchdynamicfields=GLOBAL_ADMIN,ZONAL_ADMIN
