--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -394,6 +394,7 @@ mosip.role.admin.masterdata.postzoneusersearch=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.getdocumenttypesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postdynamicfieldsfiltervalues=ZONAL_ADMIN,GLOBAL_ADMIN
 
 mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}[a-zA-Z0-9]$
 
