--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -196,6 +196,9 @@ mosip.role.admin.masterdata.putindividualtypes=ZONAL_ADMIN,GLOBAL_ADMIN
 
 #mosip.role.admin.masterdata.getlanguages=INDIVIDUAL,ID_AUTHENTICATION,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_PROCESSOR,ZONAL_ADMIN,GLOBAL_ADMIN,PRE_REGISTRATION,RESIDENT,PARTNER,AUTH_PARTNER,PARTNER_ADMIN,DEVICE_PROVIDER,DEVICE_MANAGER,Default
 mosip.role.admin.masterdata.postlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.putlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.patchlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.deletelanguagescode=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.getputlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.getpatchlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.getdeletelanguagescode=ZONAL_ADMIN,GLOBAL_ADMIN
@@ -288,6 +291,7 @@ mosip.role.admin.masterdata.putregistrationcentersdecommission=ZONAL_ADMIN,GLOBA
 mosip.role.admin.masterdata.patchregistrationcenters=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.putregistrationcenterslanguage=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.putregistrationcentersnonlanguage=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.getputregistrationcentersnonlanguage=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.getregistrationcentersmissingids=ZONAL_ADMIN,GLOBAL_ADMIN
 mosip.role.admin.masterdata.getgetzonespecificregistrationcenterslangcode=ZONAL_ADMIN,GLOBAL_ADMIN
 
