--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -220,7 +220,7 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.core.version>1.1.5.2</kernel.core.version>
+		<kernel.core.version>1.1.5.5-SNAPSHOT</kernel.core.version>
 		<kernel.auth.adaptor.version>1.1.5.2</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.1.5.2</kernel.logger.version>
 		<kernel.crypto.version>1.1.5.2</kernel.crypto.version>
@@ -310,6 +310,7 @@
 			<version>${spring.boot.version}</version>
 		</dependency>
 
+
 	</dependencies>
 	
 <distributionManagement>
@@ -320,8 +321,8 @@
                  <repository>
                         <id>ossrh</id>
                         <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository> 
-        </distributionManagement> 
+                </repository>
+        </distributionManagement>
         <build>
 <plugins>
 			<plugin>
