--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -110,3 +110,6 @@ mosip.kernel.keymanager.softhsm.certificate.country=IN
 mosip.kernel.partner.sign.masterkey.application.id=PMS
 mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
+
+syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
+syncdata.cache.snapshot.cron=0 0 23 * * *
