--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -121,3 +121,6 @@ mosip.kernel.partner.sign.masterkey.application.id=PMS
 mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+
+syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
+syncdata.cache.snapshot.cron=0 0 23 * * *
