--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -10,15 +10,15 @@ mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/jwt
 mosip.kernel.syncdata.syncjob-base-url=http://localhost:8099/v1/admin/syncjobdef
 
 mosip.kernel.masterdata.locationhierarchylevels.uri = https://dev.mosip.net/v1/masterdata/locationHierarchyLevels
-hibernate.hbm2ddl.auto=create-drop
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.show_sql=false
-hibernate.format_sql=false
-hibernate.connection.charSet=utf8
-hibernate.cache.use_second_level_cache=false
-hibernate.cache.use_query_cache=false
-hibernate.cache.use_structured_entries=false
-hibernate.generate_statistics=false
+#hibernate.hbm2ddl.auto=create-drop
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+#hibernate.show_sql=false
+#hibernate.format_sql=false
+#hibernate.connection.charSet=utf8
+#hibernate.cache.use_second_level_cache=false
+#hibernate.cache.use_query_cache=false
+#hibernate.cache.use_structured_entries=false
+#hibernate.generate_statistics=false
 
 auth.server.validate.url=http://localhost:8091/v1.0/authorize/validateToken
 mosip.kernel.keygenerator.asymmetric-algorithm-length=2048
@@ -151,6 +151,7 @@ mosip.role.admin.syncdata.getgetcacertificates=REGISTRATION_SUPERVISOR,REGISTRAT
 mosip.role.admin.syncdata.getv2clientsettings=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getclientsettingsentityIdentifier=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getscriptsscriptName=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default,REGISTRATION_PROCESSOR,INDIVIDUAL,RESIDENT,ID_AUTHENTICATION
+
 
 
 syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
