--- a/admin/kernel-syncdata-service/src/test/resources/bootstrap.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/bootstrap.properties
@@ -17,9 +17,19 @@ health.config.enabled=false
 # In Memory DB For Test
 --------------------------------------
 spring.datasource.driverClassName=org.h2.Driver
-spring.master-datasource.jdbcUrl=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:create-schema.sql'
+spring.master-datasource.jdbcUrl=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;IGNORECASE=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS master
 spring.master-datasource.username=sa
 spring.master-datasource.password=
+
+hibernate.hbm2ddl.auto=update
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.connection.charSet=utf8
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_query_cache=false
+hibernate.cache.use_structured_entries=false
+hibernate.generate_statistics=false
 
 
 #Swagger 3.0 open api
