--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -30,7 +30,7 @@ mosip.kernel.signature.signature-version-id=v1.0
 mosip.kernel.syncdata-service-idschema-url=http://localhost:8086/v1/masterdata/idschema/latest
 mosip.kernel.syncdata-service-dynamicfield-url=http://localhost:8086/v1/masterdata/dynamicfields
 mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
-
+mosip.kernel.keymanager-service-validate-url=https://dev.mosip.io/v1/keymanager/publickey/REGISTRATION
 ## To disable the logging (spring boot)
 logging.level.org.springframework=OFF
 logging.level.root=OFF
@@ -156,5 +156,3 @@ mosip.role.admin.syncdata.getscriptsscriptName=REGISTRATION_SUPERVISOR,REGISTRAT
 
 syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
 syncdata.cache.snapshot.cron=0 0 23 * * *
-
-mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
