fixed bug for language api

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -19,7 +19,7 @@ mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocesso
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
 
-masterdata_database_url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
+masterdata_database_url=jdbc:postgresql://dev2.mosip.net:30090/mosip_master
 masterdata_database_username=masteruser
 masterdata_database_password=mosip123
 auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
@@ -197,9 +197,9 @@ mosip.role.admin.masterdata.putindividualtypes=ZONAL_ADMIN,GLOBAL_ADMIN
 
 #mosip.role.admin.masterdata.getlanguages=INDIVIDUAL,ID_AUTHENTICATION,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_PROCESSOR,ZONAL_ADMIN,GLOBAL_ADMIN,PRE_REGISTRATION,RESIDENT,PARTNER,AUTH_PARTNER,PARTNER_ADMIN,DEVICE_PROVIDER,DEVICE_MANAGER,Default
 mosip.role.admin.masterdata.postlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
-mosip.role.admin.masterdata.getputlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
-mosip.role.admin.masterdata.getpatchlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
-mosip.role.admin.masterdata.getdeletelanguagescode=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.putlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.patchlanguages=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.deletelanguagescode=ZONAL_ADMIN,GLOBAL_ADMIN
 
 #mosip.role.admin.masterdata.getlocationslangcode=INDIVIDUAL,ID_AUTHENTICATION,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_PROCESSOR,ZONAL_ADMIN,GLOBAL_ADMIN,PRE_REGISTRATION,RESIDENT,REGISTRATION_ADMIN
 mosip.role.admin.masterdata.getlocations=ZONAL_ADMIN,GLOBAL_ADMIN
