--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -357,3 +357,16 @@ hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
+
+
+KEYBASEDTOKENAPI=https://dev.mosip.net/v1/authmanager/authenticate/clientidsecretkey
+
+regproc.token.request.version=1.0
+
+regproc.token.request.id=io.mosip.registration.processor
+
+regproc.token.request.appid=admin
+
+regproc.token.request.clientId=mosip
+
+regproc.token.request.secretKey=110006
