--- a/admin/admin-service/src/test/resources/application.properties
+++ b/admin/admin-service/src/test/resources/application.properties
@@ -71,3 +71,15 @@ websub.base.url=${mosipbox.public.url}
 websub.hub.url=${websub.base.url}/hub/
 # Websub URL for Publishing/registering topics
 websub.publish.url=${websub.base.url}/hub/
+
+KEYBASEDTOKENAPI=https://dev.mosip.net/v1/authmanager/authenticate/clientidsecretkey
+
+regproc.token.request.version=1.0
+
+regproc.token.request.id=io.mosip.registration.processor
+
+regproc.token.request.appid=admin
+
+regproc.token.request.clientId=mosip
+
+regproc.token.request.secretKey=110006
