--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -29,7 +29,7 @@ health.config.enabled=false
 #auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 
 #To read the property file by the name
-mosip.admin.globalproperty.prefix=globalMessages_
+mosip.admin.globalproperty.prefix=globalMessages
 mosip.admin.globalproperty.suffix=.properties
 mosip.admin-services.required.roles=GLOBAL_ADMIN
 #Swagger 3.0 open api
