--- a/admin/admin-service/src/test/resources/application.properties
+++ b/admin/admin-service/src/test/resources/application.properties
@@ -83,3 +83,50 @@ regproc.token.request.appid=admin
 regproc.token.request.clientId=mosip
 
 regproc.token.request.secretKey=110006
+
+## packet-manager properties
+mosip.commons.packetnames=id,evidence,optional
+# reader
+provider.packetreader.mosip=source:REGISTRATION_CLIENT,process:NEW|UPDATE|LOST|BIOMETRIC_CORRECTION,classname:io.mosip.commons.packet.impl.PacketReaderImpl
+# writer
+provider.packetwriter.mosip=source:REGISTRATION_CLIENT,process:NEW|UPDATE|LOST|BIOMETRIC_CORRECTION,classname:io.mosip.commons.packet.impl.PacketWriterImpl
+# posix adapter config
+objectstore.adapter.name=PosixAdapter
+objectstore.crypto.name=OnlinePacketCryptoServiceImpl
+default.provider.version=v1.0
+object.store.base.location=../packets
+objectstore.packet.source=REGISTRATION_CLIENT
+packet.manager.account.name=PACKET_MANAGER_ACCOUNT
+
+#bio cbeff file names officer / supervisor
+objectstore.packet.supervisor_biometrics_file_name=supervisor_bio_cbeff
+objectstore.packet.officer_biometrics_file_name=officer_bio_cbeff
+#CBEFF XSD Storage URI. Should not be modified
+mosip.kernel.xsdstorage-uri = LOCAL
+
+#CBEFF XSD File Location. Should not be modified
+mosip.kernel.xsdfile = LOCAL
+
+#----JSON Validator Component----
+
+#Property Source of the Identity Schema. LOCAL specifies the schema is stored within the application. Should not be modified
+mosip.kernel.jsonvalidator.property-source = LOCAL
+
+#Storage Location of the Identity Schema. LOCAL specifies the schema is stored within the application. Should not be modified
+mosip.kernel.jsonvalidator.file-storage-uri=LOCAL
+
+
+mosip.iam.adapter.issuerURL=https://dev.mosip.net.mosip.net/keycloak/auth/realms/mosip
+mosip.authmanager.base-url=https://dev.mosip.net.mosip.net/v1/authmanager
+mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
+# in minutes
+
+mosip.iam.adapter.validate-expiry-check-rate=1440
+
+# in minutes
+mosip.iam.adapter.renewal-before-expiry-interval=1440
+
+#this should be false if you don?t use this restTemplate true if you do
+
+mosip.iam.adapter.self-token-renewal-enable=true
+mosip.kernel.machineid.length=5
