--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 #spring.cloud.config.uri=http://104.211.212.28:51000
 #spring.cloud.config.label=0.12.0
-spring.cloud.config.name=admin
+#spring.cloud.config.name=admin
 spring.application.name=admin-service
-spring.profiles.default=local
+spring.profiles.default=local1
 #management.security.enabled=false
 #management.endpoint.health.show-details=when-authorized
 #management.endpoints.web.exposure.include=*
