--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -410,7 +410,7 @@ mosip.kernel.config.server.file.storage.uri=http://localhost/config/kernel-maste
 mosip.primary-language=eng
 mosip.secondary-language=ara
 mosip.all-languages=all
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};1
 nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
 
 
