--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -9,7 +9,7 @@ mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/jwtSign
 mosip.kernel.syncdata.syncjob-base-url=http://localhost:8099/v1/admin/syncjobdef
 
-mosip.kernel.masterdata.locationhierarchylevels.uri = https://dev.mosip.net/v1/masterdata/locationHierarchyLevels
+mosip.kernel.masterdata.locationhierarchylevels.uri =http://localhost:8099/v1/masterdata/locationHierarchyLevels
 #hibernate.hbm2ddl.auto=create-drop
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
 #hibernate.show_sql=false
@@ -30,7 +30,6 @@ mosip.kernel.signature.signature-version-id=v1.0
 mosip.kernel.syncdata-service-idschema-url=http://localhost:8086/v1/masterdata/idschema/latest
 mosip.kernel.syncdata-service-dynamicfield-url=http://localhost:8086/v1/masterdata/dynamicfields
 mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
-mosip.kernel.keymanager-service-validate-url=https://dev.mosip.io/v1/keymanager/publickey/REGISTRATION
 ## To disable the logging (spring boot)
 logging.level.org.springframework=OFF
 logging.level.root=OFF
