--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -333,7 +333,7 @@ mosip.iam.adapter.renewal-before-expiry-interval=1440
 mosip.iam.adapter.self-token-renewal-enable=true
 mosip.kernel.machineid.length=5
 auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
-MACHINE_GET_API=https://dev.mosip.net/v1/masterdata/machines/mappedmachines/?pageNumber=0&pageSize=100&orderBy=cr_dtimes&direction=DESC
+MACHINE_GET_API=https://dev.mosip.net/v1/masterdata/machines/mappedmachines/
 CRYPTOMANAGERDECRYPT_API=https://dev.mosip.net/v1/keymanager/decrypt
 CRYPTOMANAGER_DECRYPT=https://dev.mosip.net/v1/keymanager/decrypt
 CRYPTOMANAGER_ENCRYPT=https://dev.mosip.net/v1/keymanager/encrypt
