--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -158,3 +158,19 @@ syncdata.cache.snapshot.cron=0 0 23 * * *
 
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip'}
 mosip.kernel.keymanager.unique.identifier.autoupdate=false
+#mosip.syncdata.clientsettings.data.dir=classpath
+
+mosip.sync.entity.url.DYNAMICFIELDDTO=http://localhost:8086/v1/masterdata/dynamicfields?pageNumber=0
+mosip.sync.entity.auth-required.DYNAMICFIELDDTO=true
+mosip.sync.entity.auth-token.DYNAMICFIELDDTO=Authorization:OAUTH
+mosip.sync.entity.encrypted.DYNAMICFIELDDTO=false
+mosip.sync.entity.headers.DYNAMICFIELDDTO=Content-Type:text/plain;charset=UTF-8
+mosip.sync.entity.only-on-fullsync.DYNAMICFIELDDTO=false
+
+
+mosip.sync.entity.url.LOCATIONHIERARCHY=https://dev.mosip.net/v1/masterdata/locationHierarchyLevels
+mosip.sync.entity.auth-required.LOCATIONHIERARCHY=true
+mosip.sync.entity.auth-token.LOCATIONHIERARCHY=Authorization:OAUTH
+mosip.sync.entity.encrypted.LOCATIONHIERARCHY=false
+mosip.sync.entity.headers.LOCATIONHIERARCHY=Content-Type:text/plain;charset=UTF-8
+mosip.sync.entity.only-on-fullsync.LOCATIONHIERARCHY=false
